--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/index.html"><ion-icon name="home"></ion-icon>Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="#">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
@@ -53,19 +53,21 @@
     </div>
 
 
-    <Footer>
+    <footer>
         <div class="row">
             <div class="col-sm-4 d-flex flex-column">
-                <a href="https://facebook.com">Facebook</a>
-                <a href="https://Instagram.com">Instagram</a>
-                <a href="https://twitter.com">Twitter</a>
+                <a href="https://facebook.com"><ion-icon name="logo-facebook"></ion-icon> Facebook</a>
+                <a href="https://Instagram.com"><ion-icon name="logo-instagram"></ion-icon> Instagram</a>
+                <a href="https://twitter.com"><ion-icon name="logo-twitter"></ion-icon> Twitter</a>
             </div>
             <div class="col-sm-4">
                 <address>
-                    <h5>Contacto</h5>
-                    <p>Bv artigas 11600 (Montevideo,Uruguay)</p>
-                    <p>Tel: +598 98765432</p>
-                    <p>Contacto: alquicar@alquilerautos.com</p>
+                        <h5>Contacto</h5>
+                        <p><ion-icon name="location-sharp"></ion-icon> Bv artigas 11600 (Montevideo,Uruguay)</p>
+                        <p><ion-icon name="logo-whatsapp"></ion-icon> Whatsapp: +598 29876543</p>
+                        <p><ion-icon name="call-sharp"></ion-icon> tel: +598 98765432</p>
+                        <p><ion-icon name="mail-open-sharp"></ion-icon> Mail: alquicar@alquilerautos.com</p>
+                        <!--para los de open iconic se hace <span class="oi oi-NOMBRE DEL ICONO"></span>-->
                 </address>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
@@ -74,13 +76,13 @@
                 <a href="/contacto.html">Contacto</a>
             </div>
         </div>
-
+       
     </footer>
     <!--optional JavaScript-->
     <!--JQuery fisrst, then popper, then Bootstrap-->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  </body>
 </html>
