Tabla de precios

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"><ion-icon name="home"></ion-icon>Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="/precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
             </ul>
@@ -42,13 +43,13 @@
             <div class="col-sm-4 col-encabezado">
                 <p>
                     <h3>¿cómo funciona?</h3>
-                    <p>busca entre nuestro catálogo el vehículo que deseas alquilar</p>
+                    <p>busca entre nuestro catálogo el vehículo que deseas alquilar e iniciá tu reserva</p>
                 </p>
             </div>
             <div class="col-sm-4 col-encabezado">
                 <p>
                     <h3>¿cómo puedo alquilar un vehículo?</h3>
-                    <p>Elegí el vehículo que deseas alquilar, tu método de pago y completá tus datos, luego con la reserva pasá por nuestro local a retirarlo</p>
+                    <p>Elegí el vehículo que deseas alquilar, seleccioná el tiempo que deseas alquilar nuestro vehículo, completá tus datos y elegí tu método de pago, luego con la reserva completada pasá por nuestro local a retirarlo</p>
                 </p>
             </div>
             <div class="col-sm-4 col-encabezado align-items-end">
@@ -63,7 +64,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Citroen c4</h4>
-                    <img src="/imagenes/Citroen-C4-2021-colores.jpg"
+                    <img src="/imagenes/fotos autos/Citroen-C4-2021-colores.jpg"
                     width="150" height="85">
                     <p>Año 2021</p>
                     <p>motor 1.2 gasolina</p>
@@ -80,7 +81,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Volkswagen Gol</h4>
-                    <img src="/imagenes/Volkswagen_Gol.jpg"
+                    <img src="/imagenes/fotos autos/Volkswagen_Gol.jpg"
                     width="150" height="100">
                     <p>Año 2022</p>
                     <p>motor 1.6 diessel</p>
@@ -96,7 +97,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Renault Kwid</h4>
-                    <img src="/imagenes/Renault_Kwid.jpg"
+                    <img src="/imagenes/fotos autos/Renault_Kwid.jpg"
                     width="150" height="100">
                     <p>Año 2022</p>
                     <p>motor 1.0 gasolina</p>
@@ -112,7 +113,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Hyundai Creta</h4>
-                    <img src="/imagenes/Hyundai_Creta.jpg"
+                    <img src="/imagenes/fotos autos/Hyundai_Creta.jpg"
                     width="150" height="100">
                     <p>Año 2020</p>
                     <p>motor 1.6 gasolina</p>
@@ -128,7 +129,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Volkswagen Nivus tredline</h4>
-                    <img src="/imagenes/nivus.jpg"
+                    <img src="/imagenes/fotos autos/nivus.jpg"
                     width="150" height="100">
                     <p>Año 2022</p>
                     <p>motor 1.0 gasolina</p>
@@ -144,7 +145,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> BMW 118I </h4>
-                    <img src="/imagenes/2017-bmw-1-seriesjpg.jpg"
+                    <img src="/imagenes/fotos autos/2017-bmw-1-seriesjpg.jpg"
                     width="160" height="85">
                     <p>Año 2022</p>
                     <p>motor 1.6 gasolina</p>
@@ -160,7 +161,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Renault Oroch</h4>
-                    <img src="/imagenes/oroch.jpg"
+                    <img src="/imagenes/fotos autos/oroch.jpg"
                     width="150" height="85">
                     <p>Año 2019</p>
                     <p>motor 1.6 gasolina</p>
@@ -176,7 +177,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Mercedes Benz SLK 350</h4>
-                    <img src="/imagenes/Mercedes-Benz-SLK.jpg"
+                    <img src="/imagenes/fotos autos/Mercedes-Benz-SLK.jpg"
                     width="150" height="110">
                     <p>Año 2022</p>
                     <p>motor 3.0 gasolina</p>
@@ -193,7 +194,7 @@
             <div class="car-alq d-flex flex-column justify-content-between">
                 <div>
                     <h4 class="auto"> Hyundai H1</h4>
-                    <img src="/imagenes/Hyundai-h-minbus-portada-1.jpg"
+                    <img src="/imagenes/fotos autos/Hyundai-h-minbus-portada-1.jpg"
                     width="150" height="85">
                     <p>Año 2019</p>
                     <p>motor 2.4 diessel</p>
