--- a/term y cond.html
+++ b/term y cond.html
@@ -26,8 +26,9 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/index.html"><ion-icon name="home"></ion-icon>Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="/precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
-                <li class="nav-item active"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
+                <li class="nav-item active" aria-current="page"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
 
             </ul>
         </div>
