--- a/index.html
+++ b/index.html
@@ -61,147 +61,156 @@
         </div>
         <hr>
         <div class="d-flex flex-wrap "> <!--el flex-row-reverse rellena de derecha a izquierda-->
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Citroen c4</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Citroen</h4>
+                    <h5 class="card-subtitle text-muted"> C4</h5>
                     <img src="/imagenes/fotos autos/Citroen-C4-2021-colores.jpg"
                     width="150" height="85">
-                    <p>Año 2021</p>
-                    <p>motor 1.2 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2021</li>
+                    <li class="card-text">motor 1.2 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar C4</button>
                     <!--de momento coloco la alerta al hacer click en el botón-->
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Volkswagen Gol</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Volkswagen</h4>
+                    <h5 class="card-subtitle text-muted"> Gol</h5>
                     <img src="/imagenes/fotos autos/Volkswagen_Gol.jpg"
                     width="150" height="100">
-                    <p>Año 2022</p>
-                    <p>motor 1.6 diessel</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos delanteros</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2022</li>
+                    <li class="card-text">motor 1.6 diessel</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos delanteros</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Gol</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Renault Kwid</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Renault</h4>
+                    <h5 class="card-subtitle text-muted"> Kwid</h5>
                     <img src="/imagenes/fotos autos/Renault_Kwid.jpg"
                     width="150" height="100">
-                    <p>Año 2022</p>
-                    <p>motor 1.0 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición automática</p> 
-                    <p>vidrios eléctricos</p>
-                    <p>dirección asistida</p>
+                    <li class="card-text">Año 2022</li>
+                    <li class="card-text">motor 1.0 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición automática</li> 
+                    <li class="card-text">vidrios eléctricos</li>
+                    <li class="card-text">dirección asistida</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Kwid</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Hyundai Creta</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Hyundai</h4>
+                    <h5 class="card-subtitle text-muted"> Creta</h5>
                     <img src="/imagenes/fotos autos/Hyundai_Creta.jpg"
                     width="150" height="100">
-                    <p>Año 2020</p>
-                    <p>motor 1.6 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos delanteros</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2020</li>
+                    <li class="card-text">motor 1.6 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos delanteros</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar creta</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Volkswagen Nivus tredline</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Volkswagen</h4>
+                    <h5 class="card-subtitle text-muted"> Nivus tredline</h5>
                     <img src="/imagenes/fotos autos/nivus.jpg"
                     width="150" height="100">
-                    <p>Año 2022</p>
-                    <p>motor 1.0 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2022</li>
+                    <li class="card-text">motor 1.0 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Nivus</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> BMW 118I </h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> BMW</h4>
+                    <h5 class="card-subtitle text-muted"> 118I </h5>
                     <img src="/imagenes/fotos autos/2017-bmw-1-seriesjpg.jpg"
                     width="160" height="85">
-                    <p>Año 2022</p>
-                    <p>motor 1.6 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2022</p>
+                    <li class="card-text">motor 1.6 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar 118I</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Renault Oroch</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Renault</h4>
+                    <h5 class="card-subtitle text-muted"> Oroch</h5>
                     <img src="/imagenes/fotos autos/oroch.jpg"
                     width="150" height="85">
-                    <p>Año 2019</p>
-                    <p>motor 1.6 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2019</li>
+                    <li class="card-text">motor 1.6 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Oroch</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Mercedes Benz SLK 350</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Mercedes</h4>
+                    <h5 class="card-subtitle text-muted"> Benz SLK 350</h5>
                     <img src="/imagenes/fotos autos/Mercedes-Benz-SLK.jpg"
                     width="150" height="110">
-                    <p>Año 2022</p>
-                    <p>motor 3.0 gasolina</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos delanteros</p>
-                    <p>dirección hidráulica</p>
-                    <p>Techo corredizo</p>
+                    <li class="card-text">Año 2022</li>
+                    <li class="card-text">motor 3.0 gasolina</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos delanteros</li>
+                    <li class="card-text">dirección hidráulica</li>
+                    <li class="card-text">Techo corredizo</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar SLK</button>
                 </div> 
             </div>
-            <div class="car-alq d-flex flex-column justify-content-between">
-                <div>
-                    <h4 class="auto"> Hyundai H1</h4>
+            <div class="card border-primary car-alq d-flex flex-column justify-content-between">
+                <div class="card-body text-center">
+                    <h4 class="card-title"> Hyundai H1</h4>
+                    <h5 class="card-subtitle text-muted"> H1</h5>
                     <img src="/imagenes/fotos autos/Hyundai-h-minbus-portada-1.jpg"
                     width="150" height="85">
-                    <p>Año 2019</p>
-                    <p>motor 2.4 diessel</p>
-                    <p>Aire acondicionado</p>
-                    <p>transmición manual</p> 
-                    <p>vidrios eléctricos delanteros</p>
-                    <p>dirección hidráulica</p>
+                    <li class="card-text">Año 2019</li>
+                    <li class="card-text">motor 2.4 diessel</li>
+                    <li class="card-text">Aire acondicionado</li>
+                    <li class="card-text">transmición manual</li> 
+                    <li class="card-text">vidrios eléctricos delanteros</li>
+                    <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
                     <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar H1</button>
