agregué imagen y modifiqué a card las que ya estaban

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body> 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"><!--fixed-top es para que el navbar quede aunque baje en la página-->
         <!--el navbar-expand hace que se expanda la navbar y si achico se pasa a menú desplegable, el md es el tamaño, puede ser lg(large) o sm(small)-->
-        <a class="navbar-brand" href="/index.html">Automóviles</a>
+        <a class="navbar-brand" href="/index.html"><img src="/imagenes/logos/Banner2.jpg" class="imagenlogo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span><!--éste es el ícono del botón-->
         </button>
@@ -29,8 +29,10 @@
         </div>
     </nav>
     <div class="jumbotron mt-4 p-5">
-        <h1>Alquiler de Automóviles</h1>
+        <h1>AlquiCar</h1>
+        <h6>Alquiler de automóviles</h6>
     </div>
+    <img src="/imagenes/fotos autos/imagen automotora.jpg" class="img-fluid" alt="Responsive image">
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -65,8 +67,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Citroen</h4>
                     <h5 class="card-subtitle text-muted"> C4</h5>
-                    <img src="/imagenes/fotos autos/Citroen-C4-2021-colores.jpg"
-                    width="150" height="85">
+                    <img src="/imagenes/fotos autos/Citroen-C4-2021-colores.jpg" class="card-img-top">
                     <li class="card-text">Año 2021</li>
                     <li class="card-text">motor 1.2 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -83,8 +84,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Volkswagen</h4>
                     <h5 class="card-subtitle text-muted"> Gol</h5>
-                    <img src="/imagenes/fotos autos/Volkswagen_Gol.jpg"
-                    width="150" height="100">
+                    <img src="/imagenes/fotos autos/Volkswagen_Gol.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 1.6 diessel</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -100,8 +100,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Renault</h4>
                     <h5 class="card-subtitle text-muted"> Kwid</h5>
-                    <img src="/imagenes/fotos autos/Renault_Kwid.jpg"
-                    width="150" height="100">
+                    <img src="/imagenes/fotos autos/Renault_Kwid.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 1.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -117,8 +116,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Hyundai</h4>
                     <h5 class="card-subtitle text-muted"> Creta</h5>
-                    <img src="/imagenes/fotos autos/Hyundai_Creta.jpg"
-                    width="150" height="100">
+                    <img src="/imagenes/fotos autos/Hyundai_Creta.jpg" class="card-img-top">
                     <li class="card-text">Año 2020</li>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -134,8 +132,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Volkswagen</h4>
                     <h5 class="card-subtitle text-muted"> Nivus tredline</h5>
-                    <img src="/imagenes/fotos autos/nivus.jpg"
-                    width="150" height="100">
+                    <img src="/imagenes/fotos autos/nivus.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 1.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -151,8 +148,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> BMW</h4>
                     <h5 class="card-subtitle text-muted"> 118I </h5>
-                    <img src="/imagenes/fotos autos/2017-bmw-1-seriesjpg.jpg"
-                    width="160" height="85">
+                    <img src="/imagenes/fotos autos/2017-bmw-1-seriesjpg.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</p>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -168,8 +164,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Renault</h4>
                     <h5 class="card-subtitle text-muted"> Oroch</h5>
-                    <img src="/imagenes/fotos autos/oroch.jpg"
-                    width="150" height="85">
+                    <img src="/imagenes/fotos autos/oroch.jpg" class="card-img-top">
                     <li class="card-text">Año 2019</li>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -185,8 +180,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Mercedes</h4>
                     <h5 class="card-subtitle text-muted"> Benz SLK 350</h5>
-                    <img src="/imagenes/fotos autos/Mercedes-Benz-SLK.jpg"
-                    width="150" height="110">
+                    <img src="/imagenes/fotos autos/Mercedes-Benz-SLK.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 3.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -203,8 +197,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Hyundai H1</h4>
                     <h5 class="card-subtitle text-muted"> H1</h5>
-                    <img src="/imagenes/fotos autos/Hyundai-h-minbus-portada-1.jpg"
-                    width="150" height="85">
+                    <img src="/imagenes/fotos autos/Hyundai-h-minbus-portada-1.jpg" class="card-img-top">
                     <li class="card-text">Año 2019</li>
                     <li class="card-text">motor 2.4 diessel</li>
                     <li class="card-text">Aire acondicionado</li>
